tests/custom/STARIS_2022/basic/type-conversion-operators/toInt-error/stderr.expected
Error:
    toInt-error.essence:3:15:
  |
3 | such that b = toInt(a)
  |               ^^^^^^^^
Type error:
	Expected: bool
	Got: int

cat: *.solution: No such file or directory
